fixed css background not centered

--- a/css/app.css
+++ b/css/app.css
@@ -1,6 +1,6 @@
 body {
   background-image: url('../images/fieryMeNdCorrected.jpg');
-  background-position: 50% 76%%;
+  background-position: 50% 76%;
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
